--- a/app/src/main/res/layout/activity_update_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_update_add_worker_one.xml
@@ -44,12 +44,12 @@
 
             <TextView
                 android:id="@+id/tv_next"
-                android:enabled="false"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="16dp"
+                android:enabled="false"
                 android:letterSpacing="-0.03"
                 android:text="다음"
                 android:textColor="#adadad"
@@ -81,67 +81,13 @@
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
+
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_select_rank"
+                android:id="@+id/cl_input_position"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="24dp">
-
-                <TextView
-                    android:id="@+id/tv_select_rank_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="-4sp"
-                    android:text="직급 선택하기"
-                    android:textColor="#343434"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_alba"
-                    android:layout_width="55dp"
-                    android:layout_height="31dp"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center"
-                    android:background="@drawable/bg_selector_rest_long"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="0sp"
-                    android:paddingVertical="8dp"
-                    android:stateListAnimator="@null"
-                    android:text="알바생"
-                    android:textColor="#6f6f6f"
-                    android:textSize="11sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_select_rank_title" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_staff"
-                    android:layout_width="44dp"
-                    android:layout_height="31dp"
-                    android:gravity="center"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/bg_selector_rest_long"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="0sp"
-                    android:paddingVertical="8dp"
-                    android:text="직원"
-                    android:textColor="#6f6f6f"
-                    android:textSize="11sp"
-                    app:layout_constraintStart_toEndOf="@id/btn_alba"
-                    app:layout_constraintTop_toBottomOf="@id/tv_select_rank_title" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_select_position"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="24dp">
+                android:layout_marginTop="36dp">
 
                 <TextView
                     android:id="@+id/tv_select_position"
@@ -150,135 +96,112 @@
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="-4sp"
                     android:text="포지션 선택하기"
-                    android:textColor="#343434"
+                    android:textColor="@color/text4_343434"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <LinearLayout
-                    android:id="@+id/ll_select_day"
+                <TextView
+                    android:id="@+id/tv_select_position_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="포지션이 여러개라면, 메인 포지션을 선택해 주세요."
+                    android:textColor="@color/text2_a3a3a3"
+                    android:textSize="14sp"
+                    android:layout_marginTop="6dp"
+                    app:layout_constraintStart_toStartOf="@id/tv_select_position"
+                    app:layout_constraintTop_toBottomOf="@id/tv_select_position" />
+
+                <LinearLayout
+                    android:id="@+id/ll_select_position_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_select_position">
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_select_position"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_weekday"
+                        android:id="@+id/btn_mon_to_fri"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
-                        android:gravity="center"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="8dp"
                         android:text="평일"
                         android:textColor="#6f6f6f"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_weekend"
+                        android:id="@+id/btn_sat_to_sun"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
-                        android:gravity="center"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="14dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="8dp"
                         android:text="주말"
-                        android:textColor="#6f6f6f"
-                        android:textSize="12sp" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_manager"
-                        android:layout_width="55dp"
-                        android:layout_height="31dp"
-                        android:gravity="center"
                         android:layout_marginStart="4dp"
-                        android:layout_marginTop="16dp"
-                        android:background="@drawable/bg_selector_rest_long"
-                        android:letterSpacing="-0.02"
-                        android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
-                        android:text="매니저"
                         android:textColor="#6f6f6f"
-                        android:textSize="12sp" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_store_manager"
-                        android:layout_width="44dp"
-                        android:layout_height="31dp"
-                        android:gravity="center"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginTop="16dp"
-                        android:background="@drawable/bg_selector_rest_long"
-                        android:letterSpacing="-0.02"
-                        android:lineSpacingExtra="0sp"
-                        android:paddingVertical="8dp"
-                        android:text="점장"
-                        android:textColor="#6f6f6f"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/ll_select_time"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/ll_select_position_bottom"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/ll_select_day">
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/ll_select_position_top"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_open"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
-                        android:gravity="center"
-                        android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="8dp"
                         android:text="오픈"
                         android:textColor="#6f6f6f"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_middle"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
-                        android:gravity="center"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="8dp"
                         android:text="미들"
+                        android:layout_marginStart="4dp"
                         android:textColor="#6f6f6f"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_end"
+                        android:id="@+id/btn_close"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
-                        android:gravity="center"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
                         android:lineSpacingExtra="0sp"
                         android:paddingVertical="8dp"
                         android:text="마감"
+                        android:layout_marginStart="4dp"
                         android:textColor="#6f6f6f"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
                 </LinearLayout>
 
-
             </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_input_schedule"
@@ -307,7 +230,7 @@
                     android:layout_marginTop="12dp"
                     android:letterSpacing="-0.03"
                     android:text="근무일"
-                    android:textColor="#a3a3a3"
+                    android:textColor="@color/text3_6f6f6f"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_input_scheudle"
@@ -317,45 +240,48 @@
                     android:id="@+id/btn_select_work_day"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="근무일 설정하기"
-                    android:gravity="center"
-                    android:textSize="14sp"
                     android:layout_marginTop="14dp"
-                    android:paddingVertical="11dp"
                     android:background="@drawable/btn_fill_ffffff_raidus_efefef_10"
+                    android:gravity="center"
+                    android:paddingVertical="11dp"
+                    android:text="근무일 설정하기"
                     android:textColor="@color/text3_6f6f6f"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_working_day"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_working_day" />
 
                 <LinearLayout
                     android:id="@+id/ll_rest_day"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginTop="32dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/btn_select_work_day"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    app:layout_constraintTop_toBottomOf="@id/btn_select_work_day">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="쉬는시간"
                         android:textColor="@color/text3_6f6f6f"
-                        android:textSize="16sp"
-                        android:text="쉬는시간"/>
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="근무일 4시간 이상부터 적용"
                         android:layout_marginStart="6dp"
+                        android:text="근무일 4시간 이상부터 적용"
                         android:textColor="@color/text2_a3a3a3"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <ImageView
+                        android:id="@+id/iv_rest_time_info"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
+                        android:src="@drawable/ic_rest_time_question_info"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -363,8 +289,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ll_rest_day">
 
 
