--- a/app/src/main/res/layout/child_fragment_home_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_opened.xml
@@ -763,6 +763,7 @@
 
 
     <TextView
+        android:id="@+id/tv_today_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="오늘의 할 일"
@@ -776,24 +777,14 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="47dp"/>
 
-    <ImageButton
-        android:id="@+id/ibtn_add"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/ic_add_24_px"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_worker_list"
-        android:layout_marginTop="48dp"/>
-
     <RelativeLayout
         android:id="@+id/rl_together_bg"
         android:layout_width="match_parent"
         android:layout_height="117dp"
         android:background="@drawable/rectangle_fill_white_radius_20"
         android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@id/ibtn_add"
-        android:layout_marginTop="14dp">
+        app:layout_constraintTop_toBottomOf="@id/tv_today_todo"
+        android:layout_marginTop="12dp">
         <RelativeLayout
             android:id="@+id/rl_img"
             android:layout_width="77dp"
