--- a/app/src/main/res/layout/item_update_rv_set_worker_time.xml
+++ b/app/src/main/res/layout/item_update_rv_set_worker_time.xml
@@ -76,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
-                android:text="오픈시간"
+                android:text="출근시간"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_open_hour"
                 app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
-                android:text="마감시간"
+                android:text="퇴근시간"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_close_hour"
                 app:layout_constraintStart_toStartOf="parent"
