--- a/app/src/main/res/layout/dialog_fragment_24_hour.xml
+++ b/app/src/main/res/layout/dialog_fragment_24_hour.xml
@@ -114,6 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:text="00:00"
+                    android:textColor="@color/gray5_e2e2e2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_open_txt"
@@ -153,6 +154,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:text="00:00"
+                    android:textColor="@color/gray5_e2e2e2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_close_txt"
