--- a/app/src/main/res/drawable/selector_circle_yellow_checkbox.xml
+++ b/app/src/main/res/drawable/selector_circle_yellow_checkbox.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Unchecked -->
-    <item android:state_checked="false"
-        android:state_selected="false">
+    <item android:state_selected="false">
         <layer-list>
         <item android:drawable="@drawable/ic_circle_check_inactive" />
         </layer-list>
     </item>
     <!-- Checked -->
-    <item android:state_checked="true"
-        android:state_selected="true">
+    <item android:state_selected="true">
         <layer-list>
         <item android:drawable="@drawable/ic_circle_check_active" />
         </layer-list>
