[fix] 근무자 시간 설정 : 개별 선택 이벤트 구현중 (텍스트 수정 완료)

--- a/app/src/main/res/layout/item_rv_running_time.xml
+++ b/app/src/main/res/layout/item_rv_running_time.xml
@@ -111,7 +111,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:text="00:00"
-                android:textColor="@color/gray6_cecece"
+                android:enabled="false"
+                android:textColor="@color/selector_tv_runtime"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_open_txt"
@@ -152,7 +153,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:text="00:00"
-                android:textColor="@color/gray6_cecece"
+                android:enabled="false"
+                android:textColor="@color/selector_tv_runtime"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_close_txt"
