--- a/app/src/main/res/layout/activity_running_time.xml
+++ b/app/src/main/res/layout/activity_running_time.xml
@@ -107,7 +107,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp">
 
-                        <CheckBox
+                        <ImageButton
                             android:id="@+id/cb_running_time_checkbox"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -118,7 +118,7 @@
 
                         <View
                             android:id="@+id/view_running_check"
-                            android:background="@android:color/transparent"
+                            android:background="@android:color/black"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:clickable="true"/>
