--- a/app/src/main/res/layout/activity_running_time.xml
+++ b/app/src/main/res/layout/activity_running_time.xml
@@ -118,7 +118,7 @@
 
                         <View
                             android:id="@+id/view_running_check"
-                            android:background="@android:color/black"
+                            android:background="@android:color/transparent"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:clickable="true"/>
