[feat] 근무자 시간 설정 : 뒤로가기 요일 이벤트 구현

--- a/app/src/main/res/layout/activity_input_place_more_beta.xml
+++ b/app/src/main/res/layout/activity_input_place_more_beta.xml
@@ -108,7 +108,7 @@
         app:layout_constraintEnd_toEndOf="@id/tv_input_place_set_run_time_btn">
 
 
-        <CheckBox
+        <ImageButton
             android:id="@+id/cb_input_place_rest_day"
             android:layout_width="24dp"
             android:layout_height="24dp"
