[feat] 매장시간 설정: 버튼 활성화 여부 확인

--- a/app/src/main/res/layout/activity_input_place_more_beta.xml
+++ b/app/src/main/res/layout/activity_input_place_more_beta.xml
@@ -206,11 +206,12 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/btn_disable_yellow_fill_rounded"
+        android:enabled="false"
+        android:background="@drawable/selector_time_btn"
         android:fontFamily="@font/roboto_bold_otf"
         android:stateListAnimator="@null"
         android:text="@string/input_place_more_register"
-        android:textColor="@color/disableTxtColor"
+        android:textColor="@color/selector_tv_confirm"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
